--- a/.shellrc
+++ b/.shellrc
@@ -27,8 +27,11 @@ elif [ "$(readlink /proc/$$/exe)" = "/usr/bin/zsh" ]; then
   source ~/.powerlevel10k/powerlevel10k.zsh-theme
   source /usr/share/zsh-autosuggestions/zsh-autosuggestions.zsh
   source ~/.oh-my-zsh/plugins/git/git.plugin.zsh
+  source ~/.oh-my-zsh/plugins/sudo/sudo.plugin.zsh
   source /usr/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 fi
+
+export FZF_DEFAULT_OPTS='--color=fg:#f8f8f2,bg:#282a36,hl:#bd93f9 --color=fg+:#f8f8f2,bg+:#44475a,hl+:#bd93f9 --color=info:#ffb86c,prompt:#50fa7b,pointer:#ff79c6 --color=marker:#ff79c6,spinner:#ffb86c,header:#6272a4'
 
 ## Aliases
 if [ "$(
@@ -116,8 +119,8 @@ update() {
     echo $?
   )" -eq 0 ]; then
     echo "Updating operating system..."
-    sudo apt update && sudo apt upgrade
-    sudo apt autoremove
+    sudo apt-get update && sudo apt-get upgrade -y
+    sudo apt autoremove -y
     echo "Checking for snap package updates if they exist..."
     [[ -d /snap ]] && sudo snap refresh
   fi
