--- a/i3/config
+++ b/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:JetBrains Mono Nerd Font 8
+font pango:JetBrainsMono Nerd Font 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -219,7 +219,7 @@ client.background       #F8F8F2
 bar {
     font pango:DejaVu Sans Mono, FontAwesome 12
     position top
-    status_command /usr/bin/i3status-rs ~/.config/i3status-rust/config.toml
+    status_command /usr/bin/i3status-rs ~/.config/i3status-rs/config.toml
   colors {
     background #282A36
     statusline #F8F8F2
