--- a/i3/config
+++ b/i3/config
@@ -29,7 +29,7 @@ exec --no-startup-id dex-autostart --autostart --environment i3
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --color "000000" --nofork
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock -c "#1E1F29" -n
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -46,25 +46,27 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 bindsym XF86MonBrightnessUp exec brightnessctl set +5%
 bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
 
-# Screenshot
-# bindsym Print exec gnome-screenshot -i
-
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # launch apps
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec kitty
 bindsym $mod+Shift+f exec firefox
-bindsym $mod+Shift+b exec firefox-dev
+bindsym $mod+Shift+d exec firefox-dev
 bindsym $mod+Shift+t exec thunar
 bindsym $mod+Shift+v exec code
 
+# Screenshot
+bindsym Print exec --no-startup-id ~/.config/rofi/applets/bin/screenshot.sh
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec "dmenu_run -nf '#F8F8F2' -nb '#282A36' -sb '#6272A4' -sf '#F8F8F2' -fn 'monospace-10' -p 'menu'"
+# bindsym $mod+d exec "dmenu_run -nf '#F8F8F2' -nb '#282A36' -sb '#6272A4' -sf '#F8F8F2' -fn 'monospace-10' -p 'menu'"
+bindsym $mod+d exec --no-startup-id ~/.config/rofi/launchers/type-1/launcher.sh
+bindsym $mod+x exec --no-startup-id ~/.config/rofi/powermenu/type-2/powermenu.sh
+
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -217,7 +219,7 @@ client.background       #F8F8F2
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-    font pango:DejaVu Sans Mono, FontAwesome 12
+    font pango:JetBrainsMono Nerd Font, FontAwesome 12
     position top
     status_command /usr/bin/i3status-rs ~/.config/i3status-rs/config.toml
   colors {
