--- a/i3status-rs/config.toml
+++ b/i3status-rs/config.toml
@@ -30,9 +30,16 @@ interval = 1
 format = "{1m}"
 
 [[block]]
+block = "temperature"
+
+[[block]]
 block = "sound"
+
+[[block]]
+block = "docker"
 
 [[block]]
 block = "time"
 interval = 60
 format = "%a %d/%m %R"
+
