removing unnecessary actions

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,7 +2,7 @@ include dracula.conf
 include diff.conf
 #shell zsh
 font_size 10
-font_family      JetBrainsMono Nerd Font
+font_family      FiraCode NF
 scrollback_lines 10000
 detect_urls yes
 background_opacity 0.9
