--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -98,4 +98,4 @@ style = "bg:#1d2230"
 format = '[[  $time ](fg:#a0a9cb bg:#1d2230)]($style)'
 
 [cmd_duration]
-format = '󰞌 [$duration](bold #a0a9cb)'
+format = 'took [$duration](bold #a0a9cb)'
