--- a/i3status-rust/config.toml
+++ b/i3status-rust/config.toml
@@ -2,6 +2,9 @@ icons_format = "{icon}"
 
 [theme]
 theme = "dracula"
+[theme.overrides]
+alternating_tint_bg = "#11111100"
+alternating_tint_fg = "#11111100"
 
 [icons]
 icons = "awesome4"
@@ -31,6 +34,17 @@ button = "right"
 update = true
 
 [[block]]
+block = "hueshift"
+format = "  $temperature "
+click_temp = 4000
+
+[[block]]
+block = "kdeconnect"
+[[block.click]]
+button = "left"
+cmd = "kdeconnect-app"
+
+[[block]]
 block = "sound"
 max_vol = 150
 [[block.click]]
@@ -39,9 +53,6 @@ cmd = "pavucontrol"
 
 [[block]]
 block = "backlight"
-
-[[block]]
-block = "docker"
 
 [[block]]
 block = "dnf"
@@ -53,6 +64,16 @@ critical_updates_regex = "(linux|linux-lts|linux-zen)"
 [[block.click]]
 button = "left"
 cmd = "dnf list -q --upgrades | tail -n +2 | rofi -dmenu"
+[[block.click]]
+button = "right"
+update = true
+
+[[block]]
+block = "docker"
+if_command = "0"
+[[block.click]]
+button = "left"
+cmd = "docker ps -a --format 'table {{.ID}}\t{{.Names}}\t{{.Status}}' | rofi -dmenu"
 
 [[block]]
 block = "battery"
@@ -62,5 +83,25 @@ missing_format = ""
 [[block]]
 block = "time"
 interval = 5
-format = " $timestamp.datetime(f:'%a %d/%m %R') "
+[block.format]
+full = " $icon $timestamp.datetime(f:'%a %d/%m %R') "
+short = " $icon $timestamp.datetime(f:'%R') "
+
+[[block]]
+block = "custom"
+command = "sed 's/  //' <(curl 'https://wttr.in/tomé?format=1' -s)"
+interval = 600
+
+[[block]]
+block = "notify"
+format = " $icon {($notification_count.eng(w:1)) |}"
+[[block.click]]
+button = "right"
+action = "show"
+
+[[block]]
+block = "tea_timer"
+format = " $icon {$hours:$minutes:$seconds |}"
+increment = 60
+done_cmd = "notify-send 'Timer Finished'"
 
