--- a/i3/view.conf
+++ b/i3/view.conf
@@ -1,4 +1,4 @@
-font pango:JetBrains Mono 8
+font pango:FiraCode Nerd Font 8
 
 # class                 border  bground text    indicator child_border
 client.focused          #6272A4 #6272A4 #F8F8F2 #6272A4   #6272A4
@@ -10,7 +10,7 @@ client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A36
 client.background       #F8F8F2
 
 bar {
-    font pango:JetBrains Mono, FontAwesome 12
+    font pango:FiraCode Nerd Font, FontAwesome 12
     position top
     status_command /usr/bin/i3status-rs ~/.config/i3status-rust/config.toml
   colors {
