Automatically switching day-night mode

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,4 @@
-include dracula.conf
-include diff.conf
-#shell zsh
+shell bash
 font_size 10
 font_family JetBrainsMono Nerd Font 
 scrollback_lines 10000
@@ -10,7 +8,6 @@ map f1 copy_to_buffer a
 map f2 paste_from_buffer a
 map f3 copy_to_buffer b
 map f4 paste_from_buffer b
-# foreground #69ff94
 window_padding_width 5
 map shift+left move_window left
 map shift+right move_window right
