--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,6 +1,3 @@
-import:
-  - ~/.customization/alacritty/dracula.yml
-
 window:
   padding:
     x: 10
@@ -27,8 +24,8 @@ draw_bold_text_with_bright_colors: true
 mouse:
   hide_when_typing: true
 
-# shell:
-  # program: /usr/bin/zsh
+shell:
+  program: /usr/bin/bash
 
 key_bindings:
   - { key: Return, mods: Super|Shift, action: SpawnNewInstance }
