modified waybar modules

--- a/sway/config.d/50-rules-browser.conf
+++ b/sway/config.d/50-rules-browser.conf
@@ -15,3 +15,9 @@ for_window [con_mark="Browser"] {
 for_window [app_id="firefox" title="Firefox — Sharing Indicator"] {
     floating enable
 }
+
+# firefox floating menus
+for_window {
+    [title = "About Mozilla Firefox"] floating enable
+    [app_id="firefox" title="Library"] floating enable, sticky enable
+}
