--- a/sway/config.d/50-rules-default-floating.conf
+++ b/sway/config.d/50-rules-default-floating.conf
@@ -1,4 +1,3 @@
-# Floating windows enabled
 for_window {
     [window_role = "pop-up"] floating enable
     [window_role = "bubble"] floating enable
@@ -11,10 +10,10 @@ for_window {
     [class = "(?i)pinentry"] floating enable
     [title = "Administrator privileges required"] floating enable
     [window_role = "About"] floating enable
-    [title = "About Mozilla Firefox"] floating enable
-    [app_id="firefox" title="Library"] floating enable, sticky enable
-    [app_id="org.gnome.Calculator"] floating enable
-    [app_id="qalculate-gtk"] floating enable
-    [app_id="polkit-gnome-authentication-agent-1"] floating enable, move position center
+    # [title="(?:Open|Save) (?:File|Folder|As)"] floating enable, move position center
 }
 
+for_window {
+    [app_id="org.gnome.Calculator"] floating enable
+    [app_id="qalculate-gtk"] floating enable
+}
