--- a/sway/config.d/95-autostart-policykit-agent.conf
+++ b/sway/config.d/95-autostart-policykit-agent.conf
@@ -3,6 +3,8 @@
 # Certain applications may require this to request elevated privileges:
 #   GParted, virt-manager, anything that uses pkexec
 #
-# Requires: lxqt-policykit
+# Requires: lxqt-policykit or polkit-gnome
+
+# exec /usr/libexec/lxqt-policykit-agent
 
 exec /usr/libexec/polkit-gnome-authentication-agent-1
