--- a/waybar/config
+++ b/waybar/config
@@ -7,7 +7,7 @@
     // Choose the order of the modules
     "modules-left": ["sway/workspaces", "sway/mode", "sway/scratchpad", "custom/media"],
     "modules-center": ["sway/window"],
-    "modules-right": ["mpd", "mpris", "idle_inhibitor", "pulseaudio", "cpu", "memory", "temperature", "backlight", "keyboard-state", "battery", "battery#bat2", "clock", "custom/dunst", "tray"],
+    "modules-right": ["mpd", "mpris", "idle_inhibitor", "pulseaudio", "cpu", "memory", "temperature", "backlight", "keyboard-state", "custom/update", "battery", "battery#bat2", "clock", "custom/dunst", "tray"],
     // Modules configuration
     // "sway/workspaces": {
     //     "disable-scroll": true,
@@ -127,8 +127,8 @@
 	      "player-icons": {
 		        "default": "▶",
 		        "mpv": "🎵",
-            "firefox": " ",
-            "kdeconnect": " "
+            "firefox": "▶  ",
+            "kdeconnect": "▶  "
 	        },
 	      "status-icons": {
 		        "paused": "⏸"
@@ -178,13 +178,13 @@
         // "scroll-step": 1, // %, can be a float
         "format": "{volume}% {icon} {format_source}",
         "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
+        "format-bluetooth-muted": "󰂲 {format_source}",
         "format-muted": " {format_source}",
         "format-source": "{volume}% ",
         "format-source-muted": "",
         "format-icons": {
             "headphone": " ",
-            "hands-free": " ",
+            "hands-free": "󰥰 ",
             "headset": " ",
             "phone": " ",
             "portable": " ",
@@ -194,15 +194,15 @@
         "on-click": "pavucontrol"
     },
     "custom/update": {
-        "format": "{} ",
-        "exec": "dnf list -q --upgrades | tail -n +2",
-        "exec-if": "[[ $(dnf check-update | wc -l) != 0 ]]",
-        "interval": 15
+        "exec": "$HOME/.config/waybar/scripts/update.sh",
+        "interval": "3600",
+        // If the "-USR2" signal doesn't reload the update script you can use "sway reload" instead 
+        "on-click": "kitty --hold sh -c 'sudo dnf update && pkill -USR2 waybar'",
     },
     "custom/dunst": {
-        "exec": "~/.config/waybar/scripts/dunst.sh",
+        "exec": "$HOME/.config/waybar/scripts/dunst.sh",
         "on-click": "dunstctl set-paused toggle",
-        "restart-interval": 1,
+        "restart-interval": 1
     },
     "custom/media": {
         "format": "{icon} {}",
