--- a/sway/config.d/50-rules-default-floating.conf
+++ b/sway/config.d/50-rules-default-floating.conf
@@ -16,4 +16,5 @@ for_window {
 for_window {
     [app_id="org.gnome.Calculator"] floating enable
     [app_id="qalculate-gtk"] floating enable
+    [app_id="blueman-manager"] floating enable
 }
