--- a/sway/config.d/90-sway-view.conf
+++ b/sway/config.d/90-sway-view.conf
@@ -7,7 +7,7 @@ default_border pixel 3
 default_floating_border pixel 3
 
 # class                 border  background text    indicator child_border
-client.focused          #458588 #076678    #fbf1c7 #076678   #83a598
+client.focused          #d79921 #b57614    #fbf1c7 #b57614   #fabd2f
 client.focused_inactive #665c54 #928374    #fbf1c7 #504945   #928374
 client.unfocused        #3c3836 #504945    #ebdbb2 #282828   #504945
 client.urgent           #282828 #cc241d    #fbf1c7 #9d0006   #cc241d
