--- a/sway/config
+++ b/sway/config
@@ -18,17 +18,11 @@ set $rofi_cmd rofi \
 # Shows a combined list of the applications with desktop files and
 # executables from PATH.
 # TODO: add window with the next release of rofi-wayland
-set $menu $rofi_cmd -show combi -combi-modes drun#run -modes combi \
-        -display-combi " " -show-icons -font "JetBrainsMono Nerd Font 13" 
+set $menu $rofi_cmd -show drun \
+        -display-drun " " -show-icons -font "JetBrainsMono Nerd Font 13" 
 # Output
 set $laptop eDP-1 
 set $monitor HDMI-A-1
-# Your preferred file explorer
-set $file nautilus
-# Your preferred web browser
-set $web firefox
-# Your preferred text editor
-set $text code
 # Timeouts
 set $lock_timeout 600
 set $screen_timeout 60
@@ -123,13 +117,12 @@ input "type:touchpad" {
 # Personal applications
 #
     # Start your preferred web browser
-    bindsym $mod+Shift+w exec $web 
+    bindsym $mod+Shift+f exec firefox 
+    bindsym $mod+Shift+g exec google-chrome
 
-    # Start your preferred file explorer
-    bindsym $mod+Shift+f exec $file
-
-    # Start your preferred text editor
-    bindsym $mod+Shift+t exec $text
+    # Start your preferred text-code editor
+    bindsym $mod+Shift+v exec code
+    bindsym $mod+Shift+n exec kitty --hold sh -c 'nvim'
 
     # HTML color picker
     bindsym $mod+ctrl+p exec grim -g "$(slurp -p)" -t ppm - | convert - -format '%[pixel:p{0,0}]' txt:- | tail -n 1 | cut -d ' ' -f 4 | wl-copy
