--- a/sway/config.d/50-rules-browser.conf
+++ b/sway/config.d/50-rules-browser.conf
@@ -1,8 +1,10 @@
 # apply mark for Xwayland and wayland native browser windows
 for_window [class="Chromium-browser"] mark Browser
+for_window [class="Google-chrome"] mark Browser
 for_window [class="Brave-browser"] mark Browser
 for_window [class="firefox"]  mark Browser
 for_window [app_id="Chromium-browser"] mark Browser
+for_window [app_id="google-chrome"] mark Browser
 for_window [app_id="brave-browser"] mark Browser
 for_window [app_id="firefox"] mark Browser
 
