--- a/waybar/config
+++ b/waybar/config
@@ -7,7 +7,7 @@
     // Choose the order of the modules
     "modules-left": ["sway/workspaces", "sway/mode", "sway/scratchpad", "custom/media"],
     "modules-center": ["sway/window"],
-    "modules-right": ["mpd", "mpris", "idle_inhibitor", "pulseaudio", "cpu", "memory", "temperature", "backlight", "keyboard-state", "custom/update", "battery", "battery#bat2", "clock", "custom/dunst", "tray"],
+    "modules-right": ["idle_inhibitor", "mpd", "mpris", "pulseaudio", "cpu", "memory", "temperature", "backlight", "keyboard-state", "custom/update", "battery", "battery#bat2", "clock", "custom/dunst", "tray"],
     // Modules configuration
     // "sway/workspaces": {
     //     "disable-scroll": true,
@@ -198,6 +198,7 @@
         "interval": "3600",
         // If the "-USR2" signal doesn't reload the update script you can use "sway reload" instead 
         "on-click": "kitty --hold sh -c 'sudo dnf update && pkill -USR2 waybar'",
+        "on-click-right": "dnf list -q --upgrades | tail -n +2 | awk '{print $1}' | rofi -dmenu",
     },
     "custom/dunst": {
         "exec": "$HOME/.config/waybar/scripts/dunst.sh",
