--- a/sway/config
+++ b/sway/config
@@ -35,7 +35,7 @@ output * bg "$HOME/.config/sway/backgrounds/cornered-stairs.svg" fill
 #
 # Example configuration:
 #
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
+output HDMI-A-1 resolution 1920x1080 position 1920,0 scale 0.7
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 #
